# algorithm_assignment_2

./: .buildconfig  .gitignore  2_3.cpp  2_3v2.cpp  2_4.cpp  BFPRT.cpp  BFPRT.hpp  BFPRT_demo.cpp  CMakeLists.txt  README.md  sample.buildconfig
submit/: generate2_3.cpp  generate2_4.cpp  solution2_3.cpp  solution2_4.cpp
